# context-LLM

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  clean.sh  config.py  context.py  docker-compose.yml  dtypes.py  entity.py  entity_model.py  factcheck.py  graph_writer.py  logging_setup.py  long_test_msgs.py  matcher.json  nlp_pipe.py  parser.py  pyproject.toml  redisclient.py  requirements-graph.txt  requirements-main.txt  scheduler.py  service.py  test.py  test_integration.py  test_messages.py  test_msgs.py  utils.py  vectordb.py  verb_prep.json  vocab.json
agent/: fly.py  loop.py  orchastrate.py  orchestrate.py  tools.py
db/: memgraph.py
deleted/: embedding_model.py  entity.py  entity_model.py
graph/: graph.py  graph_builder.py  graph_driver.py  graph_writer.py  graphbuilder.py  memgraph.py
jobs/: base.py  dlq.py  merger.py  mood.py  profile.py  scheduler.py
main/: block_list.py  context.py  entity_resolve.py  nlp_pipe.py  processor.py  prompts.py  redisclient.py  service.py  system_prompt.py
models/: base.py  claude.py  factory.py  gemini.py  ollama.py
routes/: chat.py  entities.py  main.py  middleware.py  models.py  setup.py  topics.py
schedule/: merger.py  scheduler.py
schema/: common.proto  common_pb2.py  common_pb2.pyi  dtypes.py  graph_messages.proto  graph_messages_pb2.py  service.proto  tool_schema.py
shared/: dtypes.py  utils.py
static/: app.js  index.html  styles.css
